--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "5.7.1",
     "react": "^18",
+    "next-auth": "^4.24.5",
     "react-dom": "^18",
     "next": "14.1.0"
   },
@@ -22,6 +24,7 @@
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "eslint": "^8",
+    "prisma": "^5.7.1",
     "eslint-config-next": "14.1.0"
   }
 }
